# powertop-windows

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.h.cmake.in  toolchain-mingw64.cmake
scripts/: install.ps1
src/: Makefile.am  devlist.cpp  display.cpp  display.h  lib.cpp  lib.h  main.cpp
src/calibrate/: calibrate.cpp
src/cpu/: cpu.cpp
src/devices/: device.cpp  i915-gpu.cpp  network.cpp  rfkill.cpp
src/measurement/: extech.cpp  extech.h
src/perf/: perf.cpp  perf.h  perf_bundle.cpp
src/platform/: platform.h  platform_linux.cpp
src/platform/windows/: dir_win.cpp  getopt_win.h  ncurses_stub.h  platform_windows.cpp
src/process/: do_process.cpp
src/tuning/: ethernet.cpp  tuning.cpp
src/wakeup/: waketab.cpp  wakeup.cpp
